<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.india.myapplication.UserReg_Activty">


    <EditText
        android:text="USER NAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:id="@+id/uname"
        android:hint="@string/username" />
    <EditText
        android:text="MOBILE NUMBER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname"
        android:layout_marginTop="10dp"
        android:id="@+id/mbnum"
        android:hint="@string/pnumber" />
    <EditText
        android:text="E-MAIL ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mbnum"
        android:layout_marginTop="10dp"
        android:id="@+id/email"
        android:hint="@string/emailid" />
    <EditText
        android:text="PASSWORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:id="@+id/ped"
        android:hint="@string/pwd" />

    <EditText
        android:text="RE-ENTER PASSWORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ped"
        android:layout_marginTop="10dp"
        android:id="@+id/rped"
        android:hint="@string/rpwd" />
    <DatePicker
        android:id="@+id/pickerdate"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/rped"/>
    <TextView
        android:layout_below="@+id/pickerdate"
        android:layout_width="match_parent"
        android:id="@+id/info"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:text="MALE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/info"
        android:id="@+id/radioButton"
        android:hint="@string/male" />
    <RadioButton
        android:text="FEMALE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:id="@+id/radioButton1"
        android:hint="@string/female" />
    <Button
        android:text="SUBMIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton1"
        android:layout_toRightOf="@+id/radioButton1"
        android:layout_toEndOf="@+id/radioButton1"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="28dp"
        android:hint="@string/submit" />

</RelativeLayout>
